--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <header id="header-top">
+        <div class="container">
+            <img src="./assets/logo-adyson-light.png" alt="Logo">
+
+            <nav class="menu-principal">
+                <a href="">Home</a>
+                <a href="">Sobre mim</a>
+                <a href="">Projetos</a>
+                <a href="">Orçamento</a>
+                <a href="">Contato</a>
+            </nav>
+        </div>
+    </header>
+
+    <section class="call-to-action">
+        <div class="container">
+            <div class="action-info">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores sed cumque enim ratione tempore quo voluptate nostrum quibusdam culpa incidunt. Ab, laborum quaerat. Fugit dolor in quia temporibus tempore perferendis.
+            </div>
+
+            <div class="action-thumb">
+                <img src="https://placehold.co/600x400" alt="Foto Adyson">
+            </div>
+        </div>
+    </section>
     
     <script src="./js/main.js"></script>
 </body>
